<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".apartremotecontroller.presentation.activity.MainActivity">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/volume_up_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/colorPrimaryDark"
                android:padding="4dp"
                android:text="@string/activity_main_volume_up"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/current_volume_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/volume_down_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/colorPrimaryDark"
                android:padding="4dp"
                android:text="@string/activity_main_volume_down"
                android:textColor="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/mute_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/activity_main_unmute"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/source_caption_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/activity_main_source"
                android:layout_centerVertical="true"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/source_sp"
                android:layout_toEndOf="@id/source_caption_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/loading_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loading_pb"
            android:layout_margin="16dp"
            android:text="@string/activity_main_data_loading"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <ProgressBar
            android:id="@+id/loading_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>