<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/settings_bt"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/content_description_settings_button"
        android:src="@drawable/baseline_settings_white_48" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/settings_bt"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="2"
        android:weightSum="2"
        tools:context=".apartremotecontroller.presentation.activity.SelectorActivity">

        <RelativeLayout
            android:id="@+id/zone1_rl"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/zone1_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:text="Зона 1" />

            <ImageView
                android:id="@+id/edit_zone1_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_edit_white_48"
                android:contentDescription="@string/content_description_edit_zone_1" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/zone2_rl"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/zone2_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:text="Зона 2" />

            <ImageView
                android:id="@+id/edit_zone2_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_edit_white_48"
                android:contentDescription="@string/content_description_edit_zone_2" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/zone3_rl"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/zone3_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:text="Зона 3" />

            <ImageView
                android:id="@+id/edit_zone3_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_edit_white_48"
                android:contentDescription="@string/content_description_edit_zone_3" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/zone4_rl"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/zone4_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:text="Зона 4" />

            <ImageView
                android:id="@+id/edit_zone4_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_edit_white_48"
                android:contentDescription="@string/content_description_edit_zone_4" />

        </RelativeLayout>
    </GridLayout>
</RelativeLayout>